# LeetCode-cmake

./: CMakeLists.txt  solution1.cpp  solution2.cpp  solution3.cpp
